# hourus

./: Cargo.toml  README.md  example.hours
src/: cli.rs  entry.rs  error.rs  history.rs  main.rs  output.rs  report.rs  repository.rs  service.rs  storage.rs  tui.rs
src/repository/: file_repository.rs  mod.rs  repo.rs  repository.rs  sqlite_repository.rs
