[package]
name = "hourus"
description = "tui time tracking tool"
version = "0.1.0"
authors = ["zjom"]
readme = "README.md"
license = "unlicense"
license-file = "LICENSE"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = {version="0.4.44", features=["serde"]}
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
itertools = "0.14.0"
ratatui = "0.30.0"
ratatui-textarea = "0.9.0"
serde = {version = "1.0.228", features = ["derive", "rc"]}
thiserror = "2.0.18"
rusqlite = { version = "0.39.0", features = ["bundled", "chrono"], optional = true }

[features]
sqlite = ["dep:rusqlite"]
